  selector calls (simpler & more Atari-like). (RFB)
- aes/gemfslib.c: Code cleanup: eliminate LEN_FTITLE and remove unneeded
  arguments to fs_newdir(). (RFB)
- bios/screen.c bios/startup.S: Workaround for Hatari which does not disable the
  MFP interrupts after a RESET instruction. This fixes the RAM versions. (VRI)
- aes/gemfslib.c: Speed up redraw of file selector drive buttons. (RFB)
- aes/gemlib.h: Code cleanup: deleted some macros that were duplicates of
  macros in crysbind.h. (RFB)

2012-08-30
- bios/bios.c: Fixed memory leak after running the early console. (VRI)
- aes/crysbind.h aes/gem.def aes/gem.rsc aes/gemfslib.c aes/gemfslib.h
  aes/gemsuper.c: Implemented fsel_exinput() function. (RFB)
- aes/gemsuper.c include/config.h: Make appl_init() return AES version as
  1.40 since we now support fsel_exinput(). (RFB)

2012-08-31
- aes/gemshlib.c: Factorized aes_run_rom_program(). (VRI)
- aes/gemfslib.c: Code cleanup: simplify & eliminate variables. (RFB)
- aes/gemfslib.c util/string.c: Fix bug: allow file selector mask to be
  lengthened. (RFB)

2012-09-01
- bios/screen.c bios/videl.c: Added vsync() to avoid the plane shift bug when
  changing the resolution on ST. (VRI)
- bios/ikbd.c bios/panicasm.S include/kprint.h: Now cold reset always reboot
  to the ROM OS, even with EmuTOS RAM versions.
- aes/gemfslib.c: Fix loop in file selector when mask is too long. (RFB)
- aes/gemfslib.c: Cosmetic improvement to file selector. (RFB)

2012-09-02
- aes/gemfslib.c: Code cleanup: replace static variables with dynamic. (RFB)
- aes/gemfmalt.c aes/gemfmalt: Code cleanup: eliminate unnecessary globals,
  OB_ macros, compatibility macros. (RFB)

2012-09-03
- aes/gemobjop.c: Code cleanup: eliminated OB_ & compatibility macros,
  rewrote get_par(). (RFB)
- aes/gem.def aes/gem.rsc: Changed FSTITLE marker from X to _ to avoid
  unnecessary translation requirement. (RFB)
- aes/gemlib.h aes/gemmnlib.c: Code cleanup: eliminate OB_ & compatibility
  macros. (RFB)