@@ -68,12 +68,12 @@ struct ACIA
 #endif /* CONF_WITH_IKBD_ACIA || CONF_WITH_MIDI_ACIA */
 
 #if CONF_WITH_IKBD_ACIA
-#define ACIA_IKBD_BASE (0xfffffc00L)
+#define ACIA_IKBD_BASE (0x00fffc00L)
 #define ikbd_acia (*(volatile struct ACIA*)ACIA_IKBD_BASE)
 #endif
 
 #if CONF_WITH_MIDI_ACIA
-#define ACIA_MIDI_BASE (0xfffffc04L)
+#define ACIA_MIDI_BASE (0x00fffc04L)
 #define midi_acia (*(volatile struct ACIA*)ACIA_MIDI_BASE)
 #endif
 
