@@ -278,7 +278,7 @@ int_acia_loop:
         move.l  ikbdsys,a0
         jsr     (a0)
 #endif
-        lea     0xfffffa00.w,a1
+        lea     0x00fffa00,a1
         btst.b  #4,0x1(a1)                // while still interrupting
         beq     int_acia_loop
         bclr.b  #6,0x11(a1)               // clear in service bit
@@ -299,8 +299,8 @@ int_acia_loop:
 // ==== MIDI stuff ================
 //        
 
-        .equ    midi_acia_stat, 0xfffffc04
-        .equ    midi_acia_data, 0xfffffc06
+        .equ    midi_acia_stat, 0x00fffc04
+        .equ    midi_acia_data, 0x00fffc06
         
 _midisys:
         move.b  midi_acia_stat,d0
@@ -389,8 +389,8 @@ just_rts:
         rts
 
 #if CONF_WITH_IKBD_ACIA
-        .equ    ikbd_acia_stat, 0xfffffc00
-        .equ    ikbd_acia_data, 0xfffffc02
+        .equ    ikbd_acia_stat, 0x00fffc00
+        .equ    ikbd_acia_data, 0x00fffc02
 
 _ikbdsys:
         move.l  #0,d0
